<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="match_parent"
	android:background="?attr/menu_background"
	android:fillViewport="true"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<android.support.design.widget.NavigationView
			android:id="@+id/navigation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="?attr/menu_background"
			app:elevation="0dp"
			app:headerLayout="@layout/navigation_header"
			app:itemIconTint="?attr/briar_text_primary"
			app:itemTextColor="?attr/briar_text_primary"
			app:menu="@menu/navigation_drawer"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"/>

		<include
			layout="@layout/transports_list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"/>

	</LinearLayout>

</ScrollView>
